ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flock-api-ingress
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - api
  rules:
    - host: api
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flock-api
                port:
                  number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flock-web-ingress
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - app
  rules:
    - host: app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flock-web
                port:
                  number: 3000
